fixed issue regarding mobile navigation being cut off and not scrollable in portrait mode

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -404,6 +404,7 @@ body {
 
   .navbar-sub.is-active {
     display: block;
+    overflow-y: scroll;
   }
 
   .navbar-sub .container {
